# multiagent-fire-drones

./: .gitignore  README.md  pyproject.toml
metrics/: scenario_1.json  scenario_2.json  scenario_2_astar.json  scenario_2_dijkstra.json  scenario_3.json  scenario_4.json  scenario_7.json
src/firedrones/: __init__.py  config.py  main.py
src/firedrones/agents/: __init__.py  drone.py  drone_state.py
src/firedrones/control/: __init__.py  controller.py
src/firedrones/environment/: __init__.py  cell.py  fire.py  grid.py  region.py
src/firedrones/gui/: __init__.py  pygame_gui.py
src/firedrones/planning/: __init__.py  astar.py  collision_avoidance.py  dijkstra.py  task_allocator.py
src/firedrones/simulation/: __init__.py  metrics.py  scenarios.py  simulator.py
src/firedrones/utils/: __init__.py  priority_queue.py
tests/: conftest.py  test_astar.py  test_collision_avoidance.py  test_dijkstra.py  test_grid.py  test_scenarios.py  test_task_allocator.py
