[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firedrones"
version = "1.0.0"
description = "Multi-agent drone simulation for urban fire response"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]